RESOLVED FIXED307472
WebModelPlayer implements setIsLoopingAnimation instead of setLoop
https://bugs.webkit.org/show_bug.cgi?id=307472
Summary WebModelPlayer implements setIsLoopingAnimation instead of setLoop
Mike Wyrzykowski
Reported 2026-02-10 14:28:26 PST
WebModelPlayer m_isLooping should default to true
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-10 14:28:37 PST
Mike Wyrzykowski
Comment 2 2026-02-10 14:41:42 PST
EWS
Comment 3 2026-02-10 16:56:22 PST
Committed 307216@main (3edb716580b7): <https://commits.webkit.org/307216@main> Reviewed commits have been landed. Closing PR #58332 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.