WebModelPlayer implements setIsLoopingAnimation instead of setLoop https://bugs.webkit.org/show_bug.cgi?id=307472 rdar://170089595

Reviewed by Cameron McCormack.

setIsLoopingAnimation was the old idl name, now there is just a loop
property so we were overriding the wrong virtual member function.

* Source/WebKit/WebProcess/Model/WebModelPlayer.h:
* Source/WebKit/WebProcess/Model/WebModelPlayer.mm:
(WebKit::WebModelPlayer::setLoop):

Canonical link: https://commits.webkit.org/307216@main